--- a/AndroidCode3/app/src/main/res/values/strings.xml
+++ b/AndroidCode3/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">AndroidSQL</string>
+    <string name="app_name">优力订单</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="testSQL">测试SQL</string>
+    <string name="testSQL">查找数据</string>
     <string name="clean">清除数据</string>
 </resources>
