替换为优尚版本 修改名称、ICON、登录图片、数据库

--- a/linkSQLLogin/LinkDatabaseApplication/app/src/main/res/values/strings.xml
+++ b/linkSQLLogin/LinkDatabaseApplication/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">优力订单</string>
+    <string name="app_name">优尚订单</string>
     <string name="clean">清除数据</string>
     <string name="testSQL">查询数据</string>
     <string name="app_picker_name">Applications</string>
